--- a/Bootloader/configuration/t104_default/Makefile.inc
+++ b/Bootloader/configuration/t104_default/Makefile.inc
@@ -9,6 +9,7 @@
  
 F_CPU = 8000000
 DEVICE = attiny104
+LDPATH =-B $(CURDIR)"\configuration\t104_default"
 
 # hexadecimal address for bootloader section to begin. To calculate the best value:
 # - make clean; make main.hex; ### output will list data: 2124 (or something like that)
@@ -17,44 +18,21 @@ DEVICE = attiny104
 # - round that down to 94 - our new bootloader address is 94 * 64 = 6016, in hex = 1780
 BOOTLOADER_ADDRESS = 200
 
-FUSEOPT = -U lfuse:w:0xe1:m -U hfuse:w:0xdd:m -U efuse:w:0xfe:m
-FUSEOPT_DISABLERESET = -U lfuse:w:0xe1:m -U efuse:w:0xfe:m -U hfuse:w:0x5d:m
+FUSEOPT = -U fuse:w:0xf7:m 
+
+
 
 #---------------------------------------------------------------------
-# ATtiny85
+# ATtiny104
 #---------------------------------------------------------------------
-# Fuse extended byte:
-# 0xFE = - - - -   - 1 1 0
-#                        ^
-#                        |
-#                        +---- SELFPRGEN (enable self programming flash)
+# Configuration Byte
 #
-# Fuse high byte:
-# 0xdd = 1 1 0 1   1 1 0 1
-#        ^ ^ ^ ^   ^ \-+-/ 
-#        | | | |   |   +------ BODLEVEL 2..0 (brownout trigger level -> 2.7V)
-#        | | | |   +---------- EESAVE (preserve EEPROM on Chip Erase -> not preserved)
-#        | | | +-------------- WDTON (watchdog timer always on -> disable)
-#        | | +---------------- SPIEN (enable serial programming -> enabled)
-#        | +------------------ DWEN (debug wire enable)
-#        +-------------------- RSTDISBL (disable external reset -> enabled)
 #
-# Fuse high byte ("no reset": external reset disabled, can't program through SPI anymore)
-# 0x5d = 0 1 0 1   1 1 0 1
-#        ^ ^ ^ ^   ^ \-+-/ 
-#        | | | |   |   +------ BODLEVEL 2..0 (brownout trigger level -> 2.7V)
-#        | | | |   +---------- EESAVE (preserve EEPROM on Chip Erase -> not preserved)
-#        | | | +-------------- WDTON (watchdog timer always on -> disable)
-#        | | +---------------- SPIEN (enable serial programming -> enabled)
-#        | +------------------ DWEN (debug wire enable)
-#        +-------------------- RSTDISBL (disable external reset -> disabled!)
-#
-# Fuse low byte:
-# 0xe1 = 1 1 1 0   0 0 0 1
-#        ^ ^ \+/   \--+--/
-#        | |  |       +------- CKSEL 3..0 (clock selection -> HF PLL)
-#        | |  +--------------- SUT 1..0 (BOD enabled, fast rising power)
-#        | +------------------ CKOUT (clock output on CKOUT pin -> disabled)
-#        +-------------------- CKDIV8 (divide clock by 8 -> don't divide)
+# Bit 7:4	Unused
+# Bit 3		self-programming       (enable=0)
+# Bit 2     System clock output    (enable=0)
+# Bit 1 	Watchdog always on     (enable=0)	
+# Bit 0 	External Reset Disable (enable=0)	
+
 
 ###############################################################################
