--- a/Bootloader/configuration/t85_default/Makefile.inc
+++ b/Bootloader/configuration/t85_default/Makefile.inc
@@ -9,13 +9,14 @@
  
 F_CPU = 16500000
 DEVICE = attiny85
+LDPATH =-B $(CURDIR)"\configuration\t85_default"
 
 # hexadecimal address for bootloader section to begin. To calculate the best value:
 # - make clean; make main.hex; ### output will list data: 2124 (or something like that)
 # - for the size of your device (8kb = 1024 * 8 = 8192) subtract above value 2124... = 6068
 # - How many pages in is that? 6068 / 64 (tiny85 page size in bytes) = 94.8125
 # - round that down to 94 - our new bootloader address is 94 * 64 = 6016, in hex = 1780
-BOOTLOADER_ADDRESS = 400
+BOOTLOADER_ADDRESS = 1000
 
 FUSEOPT = -U lfuse:w:0xe1:m -U hfuse:w:0xdd:m -U efuse:w:0xfe:m
 FUSEOPT_DISABLERESET = -U lfuse:w:0xe1:m -U efuse:w:0xfe:m -U hfuse:w:0x5d:m
